--- a/index.html
+++ b/index.html
@@ -80,6 +80,8 @@
             color: #a3be8c;
             font-weight: bold;
         }
+
+        strong { color: #7aa2f7; } 
     </style>
 </head>
 
@@ -87,18 +89,19 @@
 
     <div class="section">
         <h1>Muhamad Maptuhul Ihsan</h1>
-        <p>Software Engineer / Cloud Enthusiast</p>
+        <p>QA Engineer & Linux Enthusiast</p>
 
         <p>
-            Gemar mengeksplorasi teknologi baru. Fokus pada pengembangan Backend,
-            Cloud Infrastructure, dan Mobile Development.
+            Gemar mengeksplorasi teknologi baru. Berfokus pada jaminan kualitas perangkat lunak (QA) dengan pendekatan teknis.
+            Memanfaatkan pemahaman mendalam tentang <strong>Linux System</strong> dan <strong>Cloud Infrastructure</strong> untuk membangun lingkungan testing yang reliabel dan otomatisasi yang efisien.
         </p>
 
         <div class="tags-container">
+            <span class="tag">Quality Assurance</span>
+            <span class="tag">Linux / Bash</span>
+            <span class="tag">Cloud (AWS/VPS)</span>
             <span class="tag">JavaScript ( Node.js )</span>
             <span class="tag">Flutter</span>
-            <span class="tag">Linux System</span>
-            <span class="tag">AWS EC2</span>
         </div>
     </div>
 
@@ -125,8 +128,9 @@
         <p>
             <span class="date">[2025]</span>
             <strong>IMoney - Finance App UI</strong><br>
-            Implementasi desain antarmuka (UI Slicing) ke dalam kode Flutter.
-            Fokus pada presisi visual (pixel-perfect) sesuai desain dan struktur widget yang modular.
+            Implementasi desain antarmuka ke dalam kode Flutter.
+            Proyek studi untuk memahami <strong>Widget Tree</strong> dan <strong>State Management</strong>, 
+            guna meningkatkan kemampuan analisis dalam <em>White-Box Testing</em>.
             <br>
             <span style="font-size: 0.8em; color: #88c0d0;">● Status: Personal Project / Prototype</span>
             <br><a href="https://github.com/MapIHS/Flutter-IMoney" style="font-size: 0.9em;">> Lihat Source Code</a>
@@ -134,7 +138,7 @@
 
         <div style="margin-top: 30px; padding-top: 20px; border-top: 1px dashed #333;">
             <p style="font-size: 0.9em; color: #888;">
-                Masih banyak skrip, dan proyek gagal lainnya.
+                Repository eksperimen, skrip otomatisasi, dan arsip belajar lainnya:
                 <br>
                 <a href="https://github.com/MapIhs?tab=repositories" target="_blank">
                     > ls -la ~/github_repositories
@@ -146,6 +150,7 @@
     <div class="section">
         <h2>Hubungi Saya</h2>
         <p>
+            Saya terbuka untuk diskusi mengenai Testing Automation, Linux, atau konfigurasi Server.<br><br>
             Email: <a href="mailto:contact@ihsn.dev">contact@ihsn.dev</a><br>
             GitHub: <a href="https://github.com/MapIhs">github.com/MapIhs</a>
         </p>
