--- a/index.html
+++ b/index.html
@@ -80,8 +80,6 @@
             color: #a3be8c;
             font-weight: bold;
         }
-
-        strong { color: #7aa2f7; } 
     </style>
 </head>
 
@@ -92,15 +90,20 @@
         <p>QA Engineer & Linux Enthusiast</p>
 
         <p>
-            Gemar mengeksplorasi teknologi baru. Berfokus pada jaminan kualitas perangkat lunak (QA) dengan pendekatan teknis.
-            Memanfaatkan pemahaman mendalam tentang <strong>Linux System</strong> dan <strong>Cloud Infrastructure</strong> untuk membangun lingkungan testing yang reliabel dan otomatisasi yang efisien.
+            Saat ini saya bekerja sebagai <strong>Freelance Quality Assurance (QA)</strong> dan sedang memperdalam
+            pendekatan teknis dalam proses pengujian perangkat lunak.
+            Saya senang mengeksplorasi teknologi baru serta memahami bagaimana sistem bekerja agar dapat diuji dengan
+            lebih efektif.
+            Dengan pemahaman tentang Linux system dan cloud infrastructure, saya berupaya membangun lingkungan testing
+            yang stabil serta mendukung otomatisasi secara bertahap.
         </p>
+
 
         <div class="tags-container">
             <span class="tag">Quality Assurance</span>
             <span class="tag">Linux / Bash</span>
             <span class="tag">Cloud (AWS/VPS)</span>
-            <span class="tag">JavaScript ( Node.js )</span>
+            <span class="tag">JavaScript / Typescript</span>
             <span class="tag">Flutter</span>
         </div>
     </div>
@@ -110,26 +113,28 @@
 
         <p>
             <span class="date">[Current]</span>
-            <strong>Remote Development Server</strong><br>
-            Infrastruktur pribadi di cloud (VPS). Terintegrasi dengan
-            Git, Docker, Nginx, serta <strong>Tailscale</strong> untuk akses jaringan privat yang aman.
+            <strong>Remote Development & Testing Server</strong><br>
+            Infrastruktur pribadi di cloud (VPS) yang digunakan sebagai lingkungan development dan testing.
+            Terintegrasi dengan Git, Docker, dan Nginx, serta <strong>Tailscale</strong> untuk akses jaringan privat.
+            Digunakan untuk mencoba setup CI ringan, environment isolation, dan simulasi workflow testing.
             <br>
-            <span class="status-active">● Status: Operational</span>
+            <span class="status-active">● Status: Actively Used</span>
         </p>
+
 
         <p>
             <span class="date">[2024]</span>
-            <strong>Automated Mobile Testing</strong><br>
-            Implementasi pengujian aplikasi Android otomatis menggunakan <strong>AWS Device Farm</strong>.
-            Menjalankan <em>instrumentation tests</em> pada berbagai perangkat nyata (real devices) di cloud
-            untuk memastikan kompatibilitas dan performa aplikasi.
+            <strong>Automated Mobile Testing (Android)</strong><br>
+            Eksperimen pengujian aplikasi Android secara otomatis menggunakan <strong>AWS Device Farm</strong>.
+            Menjalankan <em>instrumentation tests</em> pada beberapa real devices di cloud
+            untuk mempelajari kompatibilitas, stabilitas, dan alur eksekusi test otomatis.
         </p>
 
         <p>
             <span class="date">[2025]</span>
             <strong>IMoney - Finance App UI</strong><br>
             Implementasi desain antarmuka ke dalam kode Flutter.
-            Proyek studi untuk memahami <strong>Widget Tree</strong> dan <strong>State Management</strong>, 
+            Proyek studi untuk memahami <strong>Widget Tree</strong> dan <strong>State Management</strong>,
             guna meningkatkan kemampuan analisis dalam <em>White-Box Testing</em>.
             <br>
             <span style="font-size: 0.8em; color: #88c0d0;">● Status: Personal Project / Prototype</span>
